@@ -54,6 +54,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Filter Linux SocketCAN frames in userland if necessary.
       Enable "[wlan] dir/type/subtype" for DLT_PPI.
       Require "(iso|isis) proto" values to be within valid ranges.
+      Use the correct IS-IS PDU type offset for DLT_C_HDLC.
     rpcap:
       Support user names and passwords in rpcap:// and rpcaps:// URLs.
       Add a -t flag to rpcapd to specify the data channel port; from
